# C-Breakout-game-for-Windows

./: .gitignore  CMakeLists.txt  README.md  build.bat  update_submodule.bat
breakout_src/: CMakeLists.txt  main.cpp  test.cpp
breakout_src/common/includes/: BallObject.h  Common.h  Config.h  Game.h  GameObject.h  GameObjectCreator.h  HealthIcon.h  Renderer.h  Statistic.h  UI.h
breakout_src/common/src/: BallObject.cpp  Brick.cpp  DateTime.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  GameObjectCreator.cpp  Renderer.cpp  Statistic.cpp  UI.cpp
breakout_src/includes/: Breakout.h  Brick.h  Common.h  DateTime.h  Game.h  GameLevel.h  GameLevelsCreator.h  GameObjectCreator.h  Pong.h  Renderer.h  Statistic.h  UI.h
breakout_src/src/: BallObject.cpp  Breakout.cpp  Brick.cpp  Game.cpp  GameLevel.cpp  GameLevelsCreator.cpp  GameObjectCreator.cpp  Pong.cpp  Renderer.cpp  Statistic.cpp  UI.cpp  main.cpp
sample/: results.txt
sample/levels/: level1.txt  level5.txt
